--- a/style.css
+++ b/style.css
@@ -99,7 +99,7 @@ input {
     width: 90%;
     padding: 10px;
     margin-bottom: 2vh;
-    border: rgb(21, 21, 21);
+    border: none;
     border-bottom: 2px solid rgb(180, 180, 10);
     outline: none;
     background: rgb(21, 21, 21);
@@ -116,6 +116,18 @@ input {
     background: rgb(180, 180, 10);
 }
 
+.social-media .ul {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    height: 96vh;
+}
+
+.ul a {
+    margin: 10px;
+}
+
+
 .box {
     height: 30rem;
     width: 35rem;
@@ -125,6 +137,17 @@ input {
     top: 310%;
     right: 0%;
     z-index: 2;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.box .box-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .info {
@@ -141,3 +164,4 @@ input {
 .second-page img {
     height: 100%;
 }
+
