--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ label {
     margin-left: 2vw;
 }
 
-.submit {
+#submit {
     background-color: rgb(180, 180, 10);
     color: white;
     font-weight: 500;
@@ -95,7 +95,14 @@ label {
     border: none;
 }
 
-input {
+#send {
+    position: absolute;
+    top: 2550px;
+    left: 234px;
+}
+
+input,
+textarea {
     width: 90%;
     padding: 10px;
     margin-bottom: 2vh;
@@ -108,6 +115,7 @@ input {
     font-weight: 300;
     transition: 0.2s ease-out;
     cursor: pointer;
+    z-index: 1;
 }
 
 .social-media {
@@ -129,8 +137,8 @@ input {
 
 
 .box {
-    height: 30rem;
-    width: 35rem;
+    height: 75%;
+    width: 40%;
     background: white;
     color: black;
     position: absolute;
@@ -150,7 +158,7 @@ input {
     align-items: center;
 }
 
-.info {
+form {
     display: flex;
     flex-direction: column;
     margin-top: 10vh;
@@ -165,3 +173,97 @@ input {
     height: 100%;
 }
 
+.icon {
+    display: none;
+}
+
+.intro-small {
+    display: none;
+}
+
+@media screen and (max-width: 480px){
+    .icon {
+        display: block;
+    }
+
+    .mylinks {
+        display: none;
+    }
+
+    .controller {
+        height: 25%;
+        width: 25%;
+    }
+
+    nav {
+        width: 120%;
+    }
+    
+    .tv {
+        height: 25%;
+        width: 25%;
+    }
+    .logo {
+        font-size: 4vw;
+    }
+    .sliding-text {
+        font-size: 50%;
+    }
+    .first-page,
+    .second-page {
+        height: 100vh;
+        background: rgb(21, 21, 21);
+        color: white;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        padding-top: 70px;
+    }
+
+    .first-page img,
+    .second-page img {
+        height: 100vh;
+        width: 100vw;
+    }
+
+
+    h2 {
+        font-size: 2rem;
+    }
+    .intro-small {
+        display: block;
+    }
+
+    .intro-large {
+        display: none;
+    }
+    
+    #send {
+        display: none;
+    }
+    .contact-page {
+        color: white;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        margin-top: 45px;
+    }
+    .box {
+        width: 100vw;
+        top: 410%;
+    }
+    .social-media {
+        height: 10vh;
+        width: 100%;
+        background: rgb(180, 180, 10);
+        z-index: 3;
+    }
+    .social-media .ul {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        height: 12vh;
+    }
+}
