--- a/style.css
+++ b/style.css
@@ -58,13 +58,12 @@ a {
 
 .first-page,
 .second-page {
-    height: 100vh;
+    height: 90vh;
     background: rgb(21, 21, 21);
     color: white;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding-top: 40px;
 }
 
 .contact-page {
@@ -77,7 +76,7 @@ a {
 
 .main {
     height: 100vh;
-    padding-top: 5vh;
+    padding-top: 10vh;
     margin-left: 8vw;
 }
 
@@ -91,14 +90,15 @@ label {
     color: white;
     font-weight: 500;
     width: 20%;
-    margin-top: 10vh;
+    margin-top: 6vh;
     border: none;
 }
 
 #send {
     position: absolute;
     top: 2550px;
-    left: 234px;
+    left: 245px;
+    display: none;
 }
 
 input,
@@ -122,27 +122,36 @@ textarea {
     height: 100vh;
     width: 20%;
     background: rgb(180, 180, 10);
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
 }
 
 .social-media .ul {
     display: flex;
     justify-content: space-evenly;
-    align-items: flex-end;
-    height: 96vh;
+    align-items: center;
+    height: 12vh;
 }
 
 .ul a {
     margin: 10px;
+    z-index: 3;
+}
+
+.svg-contact:hover {
+    width: 96%;
+    height: 96%;
 }
 
 
 .box {
-    height: 75%;
-    width: 40%;
+    height: 78%;
+    width: 38%;
     background: white;
     color: black;
     position: absolute;
-    top: 310%;
+    top: 290%;
     right: 0%;
     z-index: 2;
     display: flex;
@@ -218,12 +227,11 @@ form {
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding-top: 70px;
     }
 
     .first-page img,
     .second-page img {
-        height: 100vh;
+        height: 85vh;
         width: 100vw;
     }
 
@@ -248,14 +256,13 @@ form {
         flex-direction: column;
         justify-content: space-between;
         align-items: center;
-        margin-top: 45px;
     }
     .box {
         width: 100vw;
         top: 410%;
     }
     .social-media {
-        height: 10vh;
+        height: 12vh;
         width: 100%;
         background: rgb(180, 180, 10);
         z-index: 3;
